--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -2,7 +2,6 @@
 :root {
     /* Colors */
     --primary-color: #316d7b;
-    --primary-color-rgb: 49, 109, 123;
     --secondary-color: #f8f9fa;
     --accent-color: #FF6B6B;
     --bg-color: #ffffff;
@@ -28,7 +27,7 @@
     --mono-font: 'Courier New', monospace;
 
     /* Typography scales */
-    --title-jumbo-size: 5rem;
+    --title-jumbo-size: 6.5rem;
     --title-large-size: 4rem;
     --title-medium-size: 2.5rem;
     --title-small-size: 1.7rem;
